--- a/lib/components/Tooltip/Tooltip.module.css
+++ b/lib/components/Tooltip/Tooltip.module.css
@@ -97,7 +97,23 @@
   border-radius: 4px;
   box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.15);
   font-size: 0.875rem;
+  font-weight: 500;
   max-width: 250px;
+  opacity: 0;
+  transition:
+    opacity 0.1s cubic-bezier(.55, .05, .45, .95),
+    overlay 0.1s allow-discrete,
+    display 0.1s allow-discrete;
+}
+
+.tooltip--default-styles:popover-open {
+  opacity: 1;
+}
+
+@starting-style {
+  .tooltip--default-styles:popover-open {
+    opacity: 0;
+  }
 }
 
 @media (prefers-color-scheme: light) {
