--- a/lib/components/ProductTourTooltip/ProductTourTooltip.module.css
+++ b/lib/components/ProductTourTooltip/ProductTourTooltip.module.css
@@ -34,10 +34,13 @@
   width: 7px;
   aspect-ratio: 1;
   border-radius: 999px;
+}
+
+.tooltip .tour-location__dot {
   background-color: var(--tooltip-primary-400);
 }
 
-.tour-location__dot--selected {
+.tooltip .tour-location__dot--selected {
   background-color: var(--tooltip-primary);
 }
 
@@ -51,19 +54,19 @@
   margin: 1.5px;
 }
 
-.tour-location__number {
+.tooltip .tour-location__number {
   font-size: 0.875rem;
   color: var(--tooltip-primary);
   margin-left: 4px;
 }
 
-.buttons {
+.tooltip .buttons {
   display: flex;
   gap: 6px;
 }
 
-.button--primary,
-.button--secondary {
+.tooltip .button--primary,
+.tooltip .button--secondary {
   border: none;
   height: 40px;
   font: inherit;
@@ -73,27 +76,27 @@
   transition: background-color 0.1s cubic-bezier(.55, .05, .45, .95);
 }
 
-.button--primary:focus-visible,
-.button--secondary:focus-visible {
+.tooltip .button--primary:focus-visible,
+.tooltip .button--secondary:focus-visible {
   outline: 2px solid var(--tooltip-primary);
   outline-offset: 2px;
 }
 
-.button--primary {
+.tooltip .button--primary {
   background-color: var(--tooltip-primary);
   color: var(--tooltip-primary-300);
 }
 
-.button--primary:hover {
+.tooltip .button--primary:hover {
   background-color: var(--tooltip-primary-900);
 }
 
-.button--secondary {
+.tooltip .button--secondary {
   background-color: transparent;
   color: var(--tooltip-primary);
 }
 
-.button--secondary:hover {
+.tooltip .button--secondary:hover {
   background-color: var(--tooltip-primary-300);
 }
 
