--- a/lib/components/ProductTourTooltip/ProductTourTooltip.module.css
+++ b/lib/components/ProductTourTooltip/ProductTourTooltip.module.css
@@ -1,127 +1,127 @@
 .tooltip {
-  width: 300px !important;
-  max-width: unset !important;
-  padding: 12px !important;
+	width: 300px !important;
+	max-width: unset !important;
+	padding: 12px !important;
 }
 
 .tooltip .tooltip__heading {
-  font-size: 1.25rem;
-  line-height: 1;
-  font-weight: 700;
-  margin: 0 0 0.4em 0;
+	font-size: 1.25rem;
+	line-height: 1;
+	font-weight: 700;
+	margin: 0 0 0.4em 0;
 }
 
 .tooltip .tooltip__body {
-  margin: 0;
-  line-height: 1.5;
-  font-weight: 400;
+	margin: 0;
+	line-height: 1.5;
+	font-weight: 400;
 }
 
 .tooltip .tooltip__bottom {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 8px;
 }
 
 .tour-location {
-  display: flex;
-  gap: 8px;
-  align-items: center;
+	display: flex;
+	gap: 8px;
+	align-items: center;
 }
 
 .tour-location__dots {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 4px;
-  align-items: center;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	gap: 4px;
+	align-items: center;
 }
 
 .tour-location__dot {
-  width: 7px;
-  aspect-ratio: 1;
-  border-radius: 999px;
-  display: block;
+	width: 7px;
+	aspect-ratio: 1;
+	border-radius: 999px;
+	display: block;
 }
 
 .tooltip .tour-location__dot {
-  background-color: var(--tooltip-primary-400);
+	background-color: var(--tooltip-primary-400);
 }
 
 .tooltip .tour-location__dot--selected {
-  background-color: var(--tooltip-primary);
+	background-color: var(--tooltip-primary);
 }
 
 .tour-location__dot--small {
-  width: 5px;
-  margin: 1px;
+	width: 5px;
+	margin: 1px;
 }
 
 .tour-location__dot--extra-small {
-  width: 4px;
-  margin: 1.5px;
+	width: 4px;
+	margin: 1.5px;
 }
 
 .tooltip .tour-location__number {
-  font-size: 0.875rem;
-  color: var(--tooltip-primary);
+	font-size: 0.875rem;
+	color: var(--tooltip-primary);
 }
 
 .tooltip .buttons {
-  display: flex;
-  gap: 6px;
+	display: flex;
+	gap: 6px;
 }
 
 .tooltip .button--primary,
 .tooltip .button--secondary {
-  border: none;
-  height: 40px;
-  font: inherit;
-  padding-inline: 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.1s cubic-bezier(.55, .05, .45, .95);
+	border: none;
+	height: 40px;
+	font: inherit;
+	padding-inline: 16px;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.1s cubic-bezier(0.55, 0.05, 0.45, 0.95);
 }
 
 .tooltip .button--primary:focus-visible,
 .tooltip .button--secondary:focus-visible {
-  outline: 2px solid var(--tooltip-primary);
-  outline-offset: 2px;
+	outline: 2px solid var(--tooltip-primary);
+	outline-offset: 2px;
 }
 
 .tooltip .button--primary {
-  background-color: var(--tooltip-primary);
-  color: var(--tooltip-primary-300);
+	background-color: var(--tooltip-primary);
+	color: var(--tooltip-primary-300);
 }
 
 .tooltip .button--primary:hover {
-  background-color: var(--tooltip-primary-900);
+	background-color: var(--tooltip-primary-900);
 }
 
 .tooltip .button--secondary {
-  background-color: transparent;
-  color: var(--tooltip-primary);
+	background-color: transparent;
+	color: var(--tooltip-primary);
 }
 
 .tooltip .button--secondary:hover {
-  background-color: var(--tooltip-primary-300);
+	background-color: var(--tooltip-primary-300);
 }
 
 @media (prefers-color-scheme: light) {
-  .tooltip {
-    --tooltip-primary: rgb(172, 194, 255);
-    --tooltip-primary-900: rgb(198, 213, 255);
-    --tooltip-primary-400: rgb(61, 82, 135);
-    --tooltip-primary-300: rgb(42, 58, 100);
-  }
+	.tooltip {
+		--tooltip-primary: rgb(172, 194, 255);
+		--tooltip-primary-900: rgb(198, 213, 255);
+		--tooltip-primary-400: rgb(61, 82, 135);
+		--tooltip-primary-300: rgb(42, 58, 100);
+	}
 }
 
 @media (prefers-color-scheme: dark) {
-  .tooltip {
-    --tooltip-primary: rgb(21, 51, 131);
-    --tooltip-primary-900: rgb(14, 36, 96);
-    --tooltip-primary-400: rgb(165, 183, 230);
-    --tooltip-primary-300: rgb(185, 201, 242);
-  }
+	.tooltip {
+		--tooltip-primary: rgb(21, 51, 131);
+		--tooltip-primary-900: rgb(14, 36, 96);
+		--tooltip-primary-400: rgb(165, 183, 230);
+		--tooltip-primary-300: rgb(185, 201, 242);
+	}
 }
